# Vision-Guided-Dual-Arm-Coordination

./: .gitmodules  Dockerfile  README.md  build.sh  build_project.sh  docker-compose.yml  enter.sh  ros_entrypoint.sh
src/vision_guided_dual_arm/vision_guided_dual_arm_main/: CMakeLists.txt  developer_notes.md  package.xml
src/vision_guided_dual_arm/vision_guided_dual_arm_main/config/: dual_arm.srdf  dual_arm_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml
src/vision_guided_dual_arm/vision_guided_dual_arm_main/launch/: dual_arm.launch.py  dual_arm_moveit.launch.py
src/vision_guided_dual_arm/vision_guided_dual_arm_main/rviz/: dual_arm_moveit.rviz
src/vision_guided_dual_arm/vision_guided_dual_arm_main/urdf/: dual_arm.urdf.xacro
